SlangNet.Bindings/Generated/Slang.cs


    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetDependencyFileCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetDependencyFileCount", ExactSpelling = true)]
    public static extern int GetDependencyFileCount([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetDependencyFilePath"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetDependencyFilePath", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* GetDependencyFilePath([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetTranslationUnitCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetTranslationUnitCount", ExactSpelling = true)]
    public static extern int GetTranslationUnitCount([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetEntryPointSource"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetEntryPointSource", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* GetEntryPointSource([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int entryPointIndex);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetEntryPointCode"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetEntryPointCode", ExactSpelling = true)]
    [return: NativeTypeName("const void *")]
    public static extern void* GetEntryPointCode([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int entryPointIndex, [NativeTypeName("size_t *")] UIntPtr* outSize);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetEntryPointCodeBlob"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetEntryPointCodeBlob", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int GetEntryPointCodeBlob([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int entryPointIndex, int targetIndex, ISlangBlob** outBlob);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetEntryPointHostCallable"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetEntryPointHostCallable", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int GetEntryPointHostCallable([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int entryPointIndex, int targetIndex, ISlangSharedLibrary** outSharedLibrary);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetTargetCodeBlob"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetTargetCodeBlob", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int GetTargetCodeBlob([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int targetIndex, ISlangBlob** outBlob);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetTargetHostCallable"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetTargetHostCallable", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int GetTargetHostCallable([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int targetIndex, ISlangSharedLibrary** outSharedLibrary);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetCompileRequestCode"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetCompileRequestCode", ExactSpelling = true)]
    [return: NativeTypeName("const void *")]
    public static extern void* GetCompileRequestCode([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("size_t *")] UIntPtr* outSize);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetContainerCode"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetContainerCode", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int GetContainerCode([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, ISlangBlob** outBlob);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.LoadRepro"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spLoadRepro", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int LoadRepro([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, ISlangFileSystem* fileSystem, [NativeTypeName("const void *")] void* data, [NativeTypeName("size_t")] UIntPtr size);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SaveRepro"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSaveRepro", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int SaveRepro([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, ISlangBlob** outBlob);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.EnableReproCapture"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spEnableReproCapture", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int EnableReproCapture([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ExtractRepro"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spExtractRepro", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int ExtractRepro([NativeTypeName("SlangSession *")] IGlobalSession* session, [NativeTypeName("const void *")] void* reproData, [NativeTypeName("size_t")] UIntPtr reproDataSize, ISlangMutableFileSystem* fileSystem);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.LoadReproAsFileSystem"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spLoadReproAsFileSystem", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int LoadReproAsFileSystem([NativeTypeName("SlangSession *")] IGlobalSession* session, [NativeTypeName("const void *")] void* reproData, [NativeTypeName("size_t")] UIntPtr reproDataSize, ISlangFileSystem* replaceFileSystem, ISlangFileSystemExt** outFileSystem);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.OverrideDiagnosticSeverity"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spOverrideDiagnosticSeverity", ExactSpelling = true)]
    public static extern void OverrideDiagnosticSeverity([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("SlangInt")] long messageID, SlangSeverity overrideSeverity);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetDiagnosticFlags"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetDiagnosticFlags", ExactSpelling = true)]
    [return: NativeTypeName("SlangDiagnosticFlags")]
    public static extern int GetDiagnosticFlags([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetDiagnosticFlags"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetDiagnosticFlags", ExactSpelling = true)]
    public static extern void SetDiagnosticFlags([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("SlangDiagnosticFlags")] int flags);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetReflection"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetReflection", ExactSpelling = true)]
    [return: NativeTypeName("SlangReflection *")]
    public static extern SlangProgramLayout* GetReflection([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionUserAttribute_GetName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionUserAttribute_GetName", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* ReflectionUserAttribute_GetName(SlangReflectionUserAttribute* attrib);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionUserAttribute_GetArgumentCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionUserAttribute_GetArgumentCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionUserAttribute_GetArgumentCount(SlangReflectionUserAttribute* attrib);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionUserAttribute_GetArgumentType"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionUserAttribute_GetArgumentType", ExactSpelling = true)]
    public static extern SlangReflectionType* ReflectionUserAttribute_GetArgumentType(SlangReflectionUserAttribute* attrib, [NativeTypeName("unsigned int")] uint index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionUserAttribute_GetArgumentValueInt"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionUserAttribute_GetArgumentValueInt", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int ReflectionUserAttribute_GetArgumentValueInt(SlangReflectionUserAttribute* attrib, [NativeTypeName("unsigned int")] uint index, int* rs);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionUserAttribute_GetArgumentValueFloat"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionUserAttribute_GetArgumentValueFloat", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int ReflectionUserAttribute_GetArgumentValueFloat(SlangReflectionUserAttribute* attrib, [NativeTypeName("unsigned int")] uint index, float* rs);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionUserAttribute_GetArgumentValueString"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionUserAttribute_GetArgumentValueString", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* ReflectionUserAttribute_GetArgumentValueString(SlangReflectionUserAttribute* attrib, [NativeTypeName("unsigned int")] uint index, [NativeTypeName("size_t *")] UIntPtr* outSize);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetKind"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetKind", ExactSpelling = true)]
    public static extern SlangTypeKind ReflectionType_GetKind(SlangReflectionType* type);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionType_GetUserAttributeCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionType_GetUserAttributeCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionType_GetUserAttributeCount(SlangReflectionType* type);
